# pity

./: .gitignore  Makefile  Makefile.am  configure.ac  ocaml.make
performance/: load.rkt  main.rkt  stopwatch.sh
pity/: .gitignore  META  META.in  Makefile.am  contracts.rkt  environment.rkt  info.rkt  lex.ss  lexer.mll  main.rkt  main.ss  misc.rkt  name.ml  name.rkt  name.ss  parse.ss  parser.mly  private.rkt  private.ss  process.rkt  repl.rkt  repl.ss  sort.rkt  sorting.rkt  term.ml  term.rkt  term.ss
pity/private/: common-lexer.rkt  environment-parser.rkt  lexer.rkt  lexer.ss  parser.rkt  parser.ss  process-lexer.rkt  process-parser.rkt  sorting-lexer.rkt  sorting-parser.rkt
pity/scribblings/: contracts.scrbl  environments.scrbl  misc.scrbl  miscellaneous.scrbl  name.scrbl  names.scrbl  pity.scrbl  process.scrbl  processes.scrbl  sorts-and-sortings.scrbl
src/: Makefile.am  main.ml  main.rkt  main.scm  name.ml  repl.rkt  term.ml
support/: ocaml.make
tests/: Makefile.am  contracts-tests.rkt  conversion-tests.rkt  environments-tests.rkt  misc-tests.rkt  name-tests.rkt  name-tests.scm  names-tests.rkt  nametests.ml  parser-tests.rkt  parsers-tests.rkt  print-tests.rkt  process-tests.rkt  sortings-tests.rkt  tests.rkt  tests.scm
thesis/: .gitignore  Makefile  common.tex  listings.tex  main.tex  pi-calcolo.tex  racket.tex  references.bib  setup.tex  thesis.dict  thesis.tex  type-system.tex
thesis/abstract/: main.tex
thesis/conclusioni/: main.tex
thesis/implementazione/: generazione-nuovi-nomi.tex  main.tex  nomi.tex  processi.tex
thesis/implementazione/ambienti/: main.tex
thesis/implementazione/nomi/: creazione-e-manipolazione.tex  generazione-nuovi-nomi.tex  main.tex
thesis/implementazione/processi/: definizione-e-alfa-conversione.tex  main.tex  stampa-e-parsing.tex
thesis/implementazione/sort/: main.tex
thesis/implementazione/sort-e-sorting/: main.tex  sort.tex  sorting.tex
thesis/implementazione/sorting/: main.tex
thesis/implementazione/toplevel/: main.tex
thesis/implementazione/type-inference/: main.tex
thesis/introduzione/: main.tex  pi-calcolo.tex  racket.tex  type-system.tex
thesis/prestazioni/: main.tex
thesis/toplevel/: main.tex
thesis/type-inference/: main.tex
